# grid-spin-taste

./: .gitignore  Makefile  configure.ac
configs/: fatlinks.l4444.ildg.20
params/: param.xml
src/: Grid_LMI.cc  Test_blas.cc  Test_meson_field.cc  Test_my_meson_field.cc  Test_new_meson_field.cc  Test_stag_gamma.cc  Test_stag_gamma_eig_a2a.cc  _original_Test_stag_gamma.cc
src/cpp/: A2ATask.h  A2AView.h  A2AWorker.h  Contract.h  DevStagA2Autils.h  DevStagA2AutilsBuggy.h  DevStagA2AutilsCached.h  DevStagA2AutilsFlatMat.h  DevStagA2AutilsMat.h  DevStagA2AutilsVector.h  Eigenpack.h  MomentumProject.h  MyStagA2Autils.h  NewStagA2Autils.h  ProdStagA2Autils.h  SpatialTrace.h  SpatialTraceVector.h  StagA2Autils.h  StagGamma.h
src/cpp/gridlmi/: A2AMatrix.hpp  DilutedNoise.hpp  Eigenpack.h  IO.cc  IO.h  LowModeProj.h  StagGamma.h
src/cpp/gridlmi/a2a/: A2ATask.h  A2AView.h  A2AWorker.h  A2AWorker_old.h  notes.txt
test/configs/: fat4444_free.ildg  fat6666_free.ildg  fat8888_free.ildg  l4444_free.ildg  l6666_free.ildg  l8888_free.ildg  lng4444_free.ildg  lng6666_free.ildg  lng8888_free.ildg
test/params/: param_free_l4444.xml  param_free_l6666.xml  param_free_l8888.xml  param_l4444.xml
